@@ -1,191 +1,115 @@
 import io.github.bonigarcia.wdm.WebDriverManager;
-import org.apache.poi.xssf.usermodel.XSSFCell;
-import org.apache.poi.xssf.usermodel.XSSFRow;
-import org.apache.poi.xssf.usermodel.XSSFSheet;
-import org.apache.poi.xssf.usermodel.XSSFWorkbook;
-import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.WebElement;
 import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
-import org.openqa.selenium.edge.EdgeDriver;
-import org.openqa.selenium.edge.EdgeOptions;
 import org.openqa.selenium.firefox.FirefoxDriver;
+import org.openqa.selenium.firefox.FirefoxOptions;
 import org.openqa.selenium.interactions.Actions;
 import org.openqa.selenium.remote.DesiredCapabilities;
 import org.openqa.selenium.remote.RemoteWebDriver;
-import org.openqa.selenium.support.ui.ExpectedConditions;
+import org.openqa.selenium.safari.SafariDriver;
 import org.openqa.selenium.support.ui.WebDriverWait;
-import org.testng.annotations.*;
+import org.testng.annotations.AfterMethod;
+import org.testng.annotations.BeforeMethod;
+import org.testng.annotations.Optional;
+import org.testng.annotations.Parameters;
 
-import java.io.FileInputStream;
-import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.time.Duration;
 
 
+
+
 public class BaseTest {
-
-    @DataProvider(name = "LoginData")
-    public Object[][] getDataFromDataProvider() {
-        return new Object[][]{
-                {"zhanna.ivanova@testpro.io", "12345678"},
-                {"invalidemail@class.com", "12345678"},
-                {"zhanna.ivanova@testpro.io", "InvalidPassword"},
-                {"", ""}
-        };
+    //added for cloud test
+    private static final ThreadLocal<WebDriver> THREAD_LOCAL = new ThreadLocal<>();
+    //added for cloud test
+    private WebDriver driver;
+    //added for cloud test
+    public static WebDriver getThreadLocal(){
+        return THREAD_LOCAL.get();
     }
-
-    @DataProvider(name = "excel-data")
-    public Object[][] excelDP() throws IOException {
-        Object[][] arrObj;
-        arrObj = getExcelData("./src/test/resources/test.xlsx", "Sheet1");
-        return arrObj;
-    }
-
-    public static WebDriver driver = null;
-    public String url = "https://qa.koel.app";
-
-    public static WebDriverWait wait = null;
-
+    //commented out for now
+    //public static WebDriver driver;
+    public static String url;
+    public WebDriverWait wait;
     public static Actions actions = null;
 
-    private static final ThreadLocal<WebDriver> threadDriver = new ThreadLocal<>();
 
-    @BeforeSuite
-    static void setupClass() {
-//        WebDriverManager.chromedriver().setup();
-    }
+//commented out for now
+    /**
+     Setup WebDriverManager for ChromeDriver
+     @BeforeSuite
+     static void setupClass() {
+     WebDriverManager.chromedriver().setup();
+     }
+     **/
 
+    //Launch browser(s) and navigate to BaseUrl
     @BeforeMethod
     @Parameters({"BaseURL"})
-    public void setupBrowser(String BaseURL) throws MalformedURLException {
-        threadDriver.set(pickBrowser(System.getProperty("browser")));
-        getDriver().manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
-        navigateToLoginPage(BaseURL);
+    //added for cloud test
+    public void setUpBrowser(@Optional String baseURL) throws MalformedURLException {
+        THREAD_LOCAL.set(pickBrowser(System.getProperty("browser")));
+        THREAD_LOCAL.get().manage().timeouts().implicitlyWait(Duration.ofSeconds(5));
+        THREAD_LOCAL.get().manage().window().maximize();
+        //THREAD_LOCAL.get().manage().deleteAllCookies();
+        getThreadLocal().get(baseURL);
+        System.out.println("Browser setup by Thread " + Thread.currentThread().getId() + " and Driver reference is: " + getThreadLocal());
     }
-
-    public static WebDriver getDriver() {
-        return threadDriver.get();
-    }
-
-    public static WebDriver pickBrowser(String browser) throws MalformedURLException {
-
-        DesiredCapabilities caps = new DesiredCapabilities();
-        String gridURL = "http://10.0.0.206:4444";
-
-        switch (browser) {
-
-            case "firefox":
-                WebDriverManager.firefoxdriver().setup();
-                return driver = new FirefoxDriver();
-            case "MicrosoftEdge":
-                WebDriverManager.edgedriver().setup();
-                EdgeOptions edgeOptions = new EdgeOptions();
-                edgeOptions.addArguments("--remote-allow-origins=*");
-                return driver = new EdgeDriver(edgeOptions);
-
-            case "grid-edge": // gradle cleam test -Dbrowser=grid-edge
-                caps.setCapability("browser", "MicrosoftEdge");
-                return driver = new RemoteWebDriver(URI.create(gridURL).toURL(), caps);
-
-            case "grid-firefox": // gradle clean test -Dbrowser=grid-firefox
-                caps.setCapability("browserName", "firefox");
-                return driver = new RemoteWebDriver(URI.create(gridURL).toURL(), caps);
-
-            case "grid-chrome": // gradle clean test -Dbrowser=grid-chrome
-                caps.setCapability("browserName", "chrome");
-                return driver = new RemoteWebDriver(URI.create(gridURL).toURL(), caps);
-
-            case "cloud":
-                return lambdaTest();
-
-            default:
-                WebDriverManager.chromedriver().setup();
-                ChromeOptions options = new ChromeOptions();
-                options.addArguments("--remote-allow-origins=*");
-                return driver = new ChromeDriver(options);
-        }
-    }
-
-    public static WebDriver lambdaTest() throws MalformedURLException {
-        String username = "muhammadtestpro";
-        String authKey = "SE8iAUT7KcFw8hrr9shssoC2PQCg4CTki1fpmP3OX6VDNr5ksJ";
-        String hub = "@hub.lambdatest.com/wd/hub";
-
+    //added for cloud test
+    public WebDriver lambdaTest() throws MalformedURLException{
+        String username = "zhanna.ivanova";
+        String authkey = "jEo67fsZEJk6ilP8WkNG23XjKbBefaiaJp7WunaYYIjkINmlOG";
+        String hub = "https://hub.lambdatest.com/wd/hub";
         DesiredCapabilities caps = new DesiredCapabilities();
         caps.setCapability("platform", "Windows 10");
         caps.setCapability("browserName", "Chrome");
         caps.setCapability("version", "120.0");
-        caps.setCapability("resolution", "12024x768");
+        caps.setCapability("resolution", "2560x1440");
         caps.setCapability("build", "TestNG with Java");
-        caps.setCapability("name", BaseTest.class.getName());
+        caps.setCapability("name", this.getClass().getName());
         caps.setCapability("plugin", "java-testNG");
-        //caps.setCapability("plugin", "java-testNG");
+        return new RemoteWebDriver(new URL("https://" + username + ":" + authkey + hub), caps);
+    }
+    public WebDriver pickBrowser(String browser) throws MalformedURLException {
+        DesiredCapabilities capabilities = new DesiredCapabilities();
+        String gridURL = "http://10.2.127.17:4444";
 
-
-        return new RemoteWebDriver(new URL("https://" + username + ":" + authKey + hub), caps);
+        switch (browser) {
+            case "Safari":
+                WebDriverManager.safaridriver().setup();
+                return driver = new SafariDriver();
+            case "firefox":
+                WebDriverManager.firefoxdriver().setup();
+                FirefoxOptions optionsFirefox = new FirefoxOptions();
+                optionsFirefox.addArguments("-private");
+                return driver = new FirefoxDriver(optionsFirefox);
+            case "grid-Safari":
+                capabilities.setCapability("browserName", "Safari");
+                return driver = new RemoteWebDriver(URI.create(gridURL).toURL(), capabilities);
+            case "grid-firefox":
+                capabilities.setCapability("browserName", "firefox");
+                return driver = new RemoteWebDriver(URI.create(gridURL).toURL(), capabilities);
+            case "grid-chrome":
+                capabilities.setCapability("browserName", "chrome");
+                return driver = new RemoteWebDriver(URI.create(gridURL).toURL(), capabilities);
+            case "cloud":
+                return lambdaTest();
+            default:
+                WebDriverManager.chromedriver().setup();
+                ChromeOptions optionsChrome = new ChromeOptions();
+                optionsChrome.addArguments("--disable-notifications","--remote-allow-origins=*", "--incognito","--start-maximized");
+                optionsChrome.setExperimentalOption("excludeSwitches", new String[]{"enable-automation"});
+                return driver = new ChromeDriver(optionsChrome);
+        }
     }
 
     @AfterMethod
     public void tearDown() {
-        threadDriver.get().close();
-        threadDriver.remove();
-    }
-
-    public void navigateToLoginPage() {
-        driver.get(url);
-    }
-
-    public void navigateToLoginPage(String BaseURL) {
-        getDriver().get(BaseURL);
-    }
-
-    public void provideEmail(String email) {
-        WebElement emailField = wait.until(ExpectedConditions.visibilityOfElementLocated(By.cssSelector("input[type='email']")));
-        emailField.clear();
-        emailField.sendKeys(email);
-    }
-
-    public void providePassword(String password) {
-        WebElement passwordField = wait.until(ExpectedConditions.visibilityOfElementLocated(By.cssSelector("input[type='password']")));
-        passwordField.clear();
-        passwordField.sendKeys(password);
-    }
-
-    public void clickSubmit() {
-        WebElement submit = wait.until(ExpectedConditions.visibilityOfElementLocated(By.cssSelector("button[type='submit']")));
-        submit.click();
-    }
-
-    public String[][] getExcelData(String fileName, String sheetName) {
-        String[][] data = null;
-        try {
-            FileInputStream fileInputStream = new FileInputStream(fileName);
-            XSSFWorkbook wb = new XSSFWorkbook(fileInputStream);
-            XSSFSheet sheet = wb.getSheet(sheetName);
-            XSSFRow row = sheet.getRow(0);
-
-            int numOfRows = sheet.getPhysicalNumberOfRows();
-            int numOfColumns = row.getLastCellNum();
-
-            XSSFCell cell;
-
-            data = new String[numOfRows - 1][numOfColumns];
-
-            for (int i = 1; i < numOfRows; i++) {
-                for (int j = 0; j < numOfColumns; j++) {
-                    row = sheet.getRow(i);
-                    cell = row.getCell(j);
-                    data[i - 1][j] = cell.getStringCellValue();
-                }
-            }
-        } catch (Exception e) {
-            System.out.println("Something went wrong." + e);
-        }
-        return data;
+        THREAD_LOCAL.get().close();
+        THREAD_LOCAL.remove();
     }
 }
-
